--- a/web/templates/web/change_password.html
+++ b/web/templates/web/change_password.html
@@ -1,10 +1,10 @@
 {% extends 'web/base.html' %}
-{% block title %}Настройки – PassManager{% endblock %}
+{% block title %}Settings – PassManager{% endblock %}
 
 {% block content %}
 <div class="card shadow-sm" style="min-width: 320px;">
     <div class="card-body">
-      <h5 class="card-title text-center mb-4">Сменить мастер-пароль</h5>
+      <h5 class="card-title text-center mb-4">Change Master Password</h5>
 
       {% if messages %}
         <div class="mb-3">
@@ -18,31 +18,31 @@
         {% csrf_token %}
 
         <div class="mb-3">
-          <label for="id_new_password1" class="form-label">Новый пароль</label>
+          <label for="id_new_password1" class="form-label">New Password</label>
           <input
             type="password"
             name="new_password1"
             id="id_new_password1"
             class="form-control"
-            placeholder="Введите новый пароль"
+            placeholder="Enter new password"
             required
           >
         </div>
 
         <div class="mb-3">
-          <label for="id_new_password2" class="form-label">Повтор пароля</label>
+          <label for="id_new_password2" class="form-label">Confirm Password</label>
           <input
             type="password"
             name="new_password2"
             id="id_new_password2"
             class="form-control"
-            placeholder="Повторите новый пароль"
+            placeholder="Repeat new password"
             required
           >
         </div>
 
         <div class="d-grid">
-          <button type="submit" class="btn btn-success">Сохранить</button>
+          <button type="submit" class="btn btn-success">Save</button>
         </div>
       </form>
     </div>
