--- a/web/templates/web/category_confirm_delete.html
+++ b/web/templates/web/category_confirm_delete.html
@@ -1,10 +1,10 @@
 {% extends 'web/base.html' %}
 {% block content %}
 <div class="col-md-6 offset-md-3">
-  <h2>Удалить категорию: {{ category.name }}</h2>
+  <h2>Delete Category: {{ category.name }}</h2>
   <form method="post">{% csrf_token %}
-    <button type="submit" class="btn btn-danger">Подтвердить удаление</button>
-    <a href="{% url 'category_list' %}" class="btn btn-secondary">Отмена</a>
+    <button type="submit" class="btn btn-danger">Confirm Deletion</button>
+    <a href="{% url 'category_list' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
