--- a/web/templates/web/category_form.html
+++ b/web/templates/web/category_form.html
@@ -1,14 +1,14 @@
 {% extends 'web/base.html' %}
 {% block content %}
 <div class="col-md-6 offset-md-3">
-  <h2>{% if form.instance.pk %}Редактировать{% else %}Добавить{% endif %} категорию</h2>
+  <h2>{% if form.instance.pk %}Edit{% else %}Add{% endif %} Category</h2>
   <form method="post">{% csrf_token %}
     <div class="mb-3">
       {{ form.name.label_tag }}
       {{ form.name }}
     </div>
-    <button type="submit" class="btn btn-primary">Сохранить</button>
-    <a href="{% url 'category_list' %}" class="btn btn-secondary">Отмена</a>
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a href="{% url 'category_list' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
