--- a/web/templates/web/entry_form.html
+++ b/web/templates/web/entry_form.html
@@ -1,7 +1,7 @@
 {% extends 'web/base.html' %}
 {% block content %}
 <div class="col-md-6 offset-md-3">
-  <h2>{% if form.instance.pk %}Редактировать{% else %}Добавить{% endif %} запись</h2>
+  <h2>{% if form.instance.pk %}Edit{% else %}Add{% endif %} Entry</h2>
   <form method="post">{% csrf_token %}
     {% for field in form %}
     <div class="mb-3">
@@ -10,8 +10,8 @@
       {{ field.errors }}
     </div>
     {% endfor %}
-    <button type="submit" class="btn btn-primary">Сохранить</button>
-    <a href="{% url 'entry_list' %}" class="btn btn-secondary">Отмена</a>
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a href="{% url 'entry_list' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
