--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -1,8 +1,8 @@
 {% extends 'web/base.html' %}
 {% block content %}
 <div class="text-center">
-  <h1>Добро пожаловать в Password Manager</h1>
-  <p><a href="{% url 'category_list' %}" class="btn btn-primary">Управление категориями</a></p>
-  <p><a href="{% url 'entry_list' %}" class="btn btn-secondary">Управление записями</a></p>
+  <h1>Welcome to Password Manager</h1>
+  <p><a href="{% url 'category_list' %}" class="btn btn-primary">Manage Categories</a></p>
+  <p><a href="{% url 'entry_list' %}" class="btn btn-secondary">Manage Entries</a></p>
 </div>
 {% endblock %}
